@@ -1,3 +1,7 @@
+2021-12-20  Andreas Scherer  <https://ascherer.github.io>
+
+	* comm-w2c.h: Reshuffle 'gettext' header.
+
 2021-12-05  Andreas Scherer  <https://ascherer.github.io>
 
 	* comm-w2c.ch,
